# learn-maintenance

./: .coveralls.yml  .gitignore  Dockerfile  Dockerfile.stage1  Dockerfile.stage2  Dockerfile.stage3  README.md  prog.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: buildImage.yml  releaseTest.yml  testing.yml  variablesTest.yml
src/length_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/progPackage/: command_line.py  prog.py
src/prog_package/: command_line.py  prog.py
src/prog_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/test_package/: command_line.py  prog.py
tests/: test_prog.py
